--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://startafuckingblog.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  kevquirk
+url: "https://billder.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  billder
 
 permalink: :title
-title: Start a Fucking Blog
+title: billder
 
 # Build settings
 plugins:
